recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:10: error: not found: value step
    tree(step-1, length*shrink, angle*shrink, shrink);
         ^